doc add user
